# swaywsr

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
assets/: example_config.toml
src/: config.rs  icons.rs  lib.rs  main.rs
