[package]
name = "swaywsr"
version = "1.4.0"
description = "Change i3-wm workspace names based on its contents"
authors = ["Pedro Scaff <pedro@scaff.me>"]
repository =  "https://github.com/pedroscaff/swaywsr"
documentation =  "https://github.com/pedroscaff/swaywsr"
readme = "README.md"
keywords = ["sway-wm", "window-manager", "workspaces", "linux"]
categories = ["command-line-utilities"]
license = "MIT"
exclude = ["/assets/*"]
edition = "2021"

[badges]
travis-ci = { repository = "pedroscaff/swaywsr" }

[dependencies]
thiserror = "2.0.18"
anyhow = "1.0.102"
lazy_static = "1.5.0"
clap = { version = "4", features = ["derive"] }
toml = "0.9.11"
serde = { version = "1.0.219", features = ["derive"] }
swayipc = "4.0.0"
itertools = "0.14.0"
